# prot

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.production  README.md  after_build_test.sh  build.sh  callgrind.out.3253169  configure_and_dependencies.sh  dependencies.sh  docker-compose.yml  docker_install_ubuntu.sh  lexer.json  persistence.json  rebuild_api.sh  requirements.txt  test.sh
POCs/: gdpr.txt  group_autorescheduling.txt  reliable_recoverable_by_discovery_job_system_replacement.txt
api/: prot.v1.yaml
api/db_schemas/: init.sh  test_prot.sql
api/db_schemas/prot/: prot.sql
api/models/: autotask.v1.json  duration.v1.json  frequency.v1.json  interval.v1.json  prot_app_info.v1.json  scheduler.v1.json  task.v1.json  tasker.v1.json  user.v1.json  user_apps_get_response.v1.yaml  user_params.v1.json  usertask.v1.json  when.v1.json
apps/: dailyworkout.json  repeatable_event.json  testflow.json  washclothes.json
apps/api/: restrictions.json
discovery_rescheduler/: CMakeLists.txt  main.cpp
docker/: Dockerfile
fmt/doc/html/: api.html  contents.html  genindex.html  index.html  objects.inv  search.html  syntax.html  usage.html
forms/: command_expr_evaluator.h  dailyworkout.json  repeatable_event.json  testflow.json  washclothes.json
forms/api/: frequencies.json  priorities.json  priority.json  restrictions.json
jobs_watcher/: CMakeLists.txt  main.cpp
persistence/: carlos.json  name.json  step 1.json  step 2.json  step 3.json  step 4.json  step 5.json  test copy.json  test.json
rest_server/: .openapi-generator-ignore  CMakeLists.txt  README.md  main-api-server.cpp
rest_server/.openapi-generator/: FILES
rest_server/api/: DefaultApi.cpp  DefaultApi.h
rest_server/impl/: DefaultApiImpl.cpp  DefaultApiImpl.h
rest_server/model/: Autotask.cpp  Autotask.h  Duration.cpp  Duration.h  Duration_oneOf.cpp  Duration_oneOf.h  Duration_oneOf_1.cpp  Duration_oneOf_1.h  Frequency.cpp  Frequency.h  Helpers.cpp  Helpers.h  Inline_object.cpp  Inline_object.h  Inline_object_1.cpp  Inline_object_1.h  Inline_object_2.cpp  Inline_object_2.h  Inline_object_3.cpp  Inline_object_3.h  Inline_object_4.cpp  Inline_object_4.h  Inline_object_5.cpp  Inline_object_5.h  Inline_response_200.cpp  Inline_response_200.h  Inline_response_200_1.cpp  Inline_response_200_1.h  Inline_response_200_1_items.cpp  Inline_response_200_1_items.h  Inline_response_200_2.cpp  Inline_response_200_2.h  Interval.cpp  Interval.h  Object.cpp  Object.h  Prot_app_info.cpp  Prot_app_info.h  Scheduler.cpp  Scheduler.h  (+14 more)
sequences/: request  request_task_movement  task  test.txt
source/: CRUD_actionable.h  api_validated.h  api_validated.hpp  app.cpp  app.h  app_cleaner.cpp  app_cleaner.h  app_discovery.cpp  app_discovery.h  app_parser.cpp  app_parser.h  app_projector.h  argument_parser.h  branch.cpp  branch.h  cloud_app_runner.cpp  cloud_app_runner.h  command_expr_evaluator.cpp  command_expr_evaluator.h  command_processor.cpp  command_processor.h  commander.h  computed_form.h  db_ops.hpp  discoverd_components.cpp  discovered_components.cpp  discovered_components.h  discovered_components.hpp  discovery.h  duration.cpp  duration.h  expanded_taskstory.h  expanded_taskstory_t.cpp  expanded_taskstory_t.h  fake_clock.cpp  fake_clock.h  form.cpp  form.h  form_collector.cpp  form_collector.h  (+55 more)
source/design/: Architecture form parser.txt  CodeStructureDesign  POC_Job_worker_to_new_microservice  POC_repeat_tasks.txt  how_to_map_expanded_inter_referenced_tasks.txt  matrix_input_example.json  primitive_input_example.json  select_input_example.json  test.txt  vector_input_example.json  washclothes.json
spdlog/: tweakme.h
test/: CMakeLists.txt  cloud_app_runner_test.cpp  db_ops_test.cpp  discovery_test.cpp  fake_clock.hh  form_runner_test.cpp  jobs_watcher_test.cpp  jobs_watcher_test.nope  main_test.cpp  persistor_test.cpp  projector_test.cpp  prot_test_clock.h  taskstory_expansor_test.cpp  time_utils_test.cpp
test/iofiles_test/: test_app_dailyworkout.json  test_app_testdailyworkout.json  test_app_testdailyworkouthistory.json  test_history.json  test_jobs_dailyworkout.json  test_matrix_input_example.json  test_task.json  test_task_wildcard.json
test_sequences/: request  test.txt
